styles.css
/* ... */
a#contact-nav-btn {
  color: #1e1d1a;
  text-decoration: unset;
  font-weight: 600;
  border: unset;
  padding: 10px 35px;
  margin: unset;
  background-color: #e2651d;
  border-radius: 50px;
}
@media (max-width: 992px) {
  .nav-container-ul__link-container > a:not(#contact-nav-btn) {
    display: none;
  }
}
@media (max-width: 470px) {
  .nav-container-ul__link-container > a:not(#contact-nav-btn),
  .nav-logo-container > h3 {
    display: none;
  }
}
@media (max-width: 330px) {
  a#contact-nav-btn {
    padding: 12px 20px;
  }
}
.hero-section {
  height: 100vh;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.hero-section__bg {
  background-image: url("images/hero-image-fusebox.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
  height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0.1;
  filter: blur(7px);
}
.hero-section__inner-container {
  max-width: 1220px;
  margin: 0 auto;
  gap: 50px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 99;
  padding: 16px;
}
.hero-message-cta-container-contact,
.hero-message-cta-container-services {
  text-decoration: unset;
  font-size: 1rem;
  font-weight: 600;
  text-transform: uppercase;
  padding: 10px 35px;
  margin: unset;
}
.hero-section-message {
  display: flex;
  flex-direction: column;
}
.hero-section-message > h1 {
  font-size: 3.125rem;
  font-weight: 500;
  margin-bottom: 12px;
  max-width: 650px;
}
.hero-section-message > p {
  margin-bottom: 20px;
}
.hero-message__cta-container {
  display: flex;
  gap: 15px;
  align-items: center;
}
.hero-message-cta-container-contact {
  color: #24231f;
  background-color: #fff;
  border-radius: 50px;
  min-width: 150px;
  width: 100%;
  max-width: 47%;
  text-align: center;
  display: block;
}
.hero-message-cta-container-services {
  color: #fff;
  border: 2px solid #fff;
  background-color: unset;
  border-radius: 50px;
}
.hero-section__image img {
  width: 100%;
  max-width: 500px;
}
#hero-down-arrow {
  max-width: 40px;
  position: absolute;
  bottom: 50px;
}
@media (max-width: 1180px) {
  .nav-container {
    top: 0;
    padding: unset;
  }
  .nav-container__inner-container {
    border-radius: unset;
    padding: 8px 16px;
  }
  .hero-section__inner-container {
    flex-direction: column;
    gap: 20px;
  }
  .hero-section-message {
    order: 2;
    max-width: 490px;
  }
  .hero-message__cta-container {
    order: 1;
  }
  .hero-section-message > h1 {
    font-size: 2.5rem;
  }
  .hero-section__image img {
    max-width: 300px;
  }
}
@media (max-height: 800px) {
  .hero-section__image img {
    display: none;
  }
}
@media (max-height: 900px) {
  #hero-down-arrow {
    bottom: 20px;
  }
}
@media (max-height: 500px) {
  #hero-down-arrow {
    display: none;
  }
}
.whatsapp-chat-container {
  display: flex;
  justify-content: end;
  position: fixed;
  right: 0px;
  bottom: 20px;
  z-index: 999;
  padding: 0 16px;
}
.whatsapp-chat-container:hover {
  cursor: pointer;
}
.whatsapp-chat-container p {
  font-size: 0;
}
.whatsapp-chat-container svg {
  height: 65px;
  width: 65px;
}
@media (max-width: 520px) {
  .hero-message__cta-container {
    flex-direction: column;
    width: 100%;
    gap: 15px;
  }
  .hero-message-cta-container-contact {
    max-width: unset;
  }
  .hero-section-message > p {
    white-space: normal;
  }
  .hero-section-message > p > br {
    display: none;
  }
  .hero-message__cta-container > a {
    width: 100%;
    display: block;
    text-align: center;
    line-height: 35px;
  }
  .whatsapp-chat-container {
    bottom: 5px;
  }
  .whatsapp-chat-container svg {
    width: 75px;
    height: 75px;
  }
}
@media (max-width: 325px) {
  .hero-section__image img {
    display: none;
  }
  .hero-section-message > h1 {
    font-size: 2rem;
  }
  .hero-message__cta-container > a {
    line-height: 25px;
  }
  #hero-down-arrow {
    bottom: 20px;
  }
  .whatsapp-chat-container svg {
    width: 65px;
    height: 65px;
  }
}

/* END NAV + HERO BANNER */

/* SERVICES SECTION */

#services {
  padding: 150px 16px 0 16px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#services > h2 {
  font-weight: 500;
  text-transform: uppercase;
  font-size: 2.7rem;
  margin-bottom: 75px;
}

.services-container {
  display: flex;
  gap: 70px;
  max-width: 1220px;
  margin: 0 auto;
}

.services-container__service {
  width: 25%;
}

.services-container__service > svg {
  margin-bottom: 50px;
  width: 180px;
}

.services-container__service > h3 {
  font-size: 2rem;
  font-weight: 300;
  text-transform: uppercase;
  margin-bottom: 50px;
}

.services-container__service > p > a {
  color: #e2651d;
  font-weight: 600;
  text-decoration: unset;
}

@media (max-width: 1020px) {
  #services {
    padding: 75px 16px 0 16px;
  }
  #services > h2 {
    font-size: 2.2rem;
    margin-bottom: 50px;
  }
  .services-container {
    flex-direction: column;
    align-items: center;
    gap: 50px;
  }
  .services-container__service {
    width: 100%;
    max-width: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .services-container__service > h3 {
    font-size: 1.8rem;
    margin-bottom: 25px;
  }
  .services-container__service > svg {
    margin-bottom: 25px;
  }
}

@media (max-width: 325px) {
  #services > h2 {
    font-size: 1.8rem;
  }
  .services-container__service > h3 {
    font-size: 1.5rem;
  }
}

/* END SERVICES SECTION */

/* GALLERY */

#gallery {
  padding: 150px 16px 0 16px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#gallery > h2 {
  font-weight: 500;
  text-transform: uppercase;
  font-size: 2.7rem;
  margin-bottom: 75px;
}

#photoswipe-gallery {
  display: flex;
  max-width: 1240px;
  margin: 0 auto;
  gap: 20px;
}

.pswp-gallery__featured,
.pswp-gallery__grid {
  width: 50%;
}
/* ... */

